crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__branch_binders_do_not_scope_over_scrutinee_siblings_or_default-2.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
case@Tag 42 of
  0 x#2 -> x#2
  1 -> 42
  _ -> 42
