crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__branch_binders_do_not_scope_over_scrutinee_siblings_or_default.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: "validate(tree, &[])"
---
Err(
    [
        UnboundVariable(
            Name {
                text: "x",
                unique: 1,
            },
        ),
        UnboundVariable(
            Name {
                text: "x",
                unique: 1,
            },
        ),
        UnboundVariable(
            Name {
                text: "x",
                unique: 1,
            },
        ),
    ],
)
