crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__duplicate_ids_include_disjoint_scopes_and_external_names.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: "validate(tree, &[x.name])"
---
Err(
    [
        DuplicateBinder(
            Name {
                text: "x",
                unique: 1,
            },
        ),
        DuplicateBinder(
            Name {
                text: "y",
                unique: 1,
            },
        ),
    ],
)
