crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__freshening_preserves_shadowing_and_numeric_identity.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
let x#2 : 'erased = 3 in
constr 0 x#2 (\x#3 : 'erased -> x#3) x#2
