crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__freshening_reserves_free_ids_and_does_not_fix_unbound_variables.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
\x#2 : 'erased -> constr 0 x#2 free#1
