crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__recursive_group_scope_is_simultaneous_and_parameters_are_local-2.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
assertion_line: 171
expression: "validate(leaking, &[]).expect_err(\"invalid scope\")"
---
[
    UnboundVariable(
        Name {
            text: "p",
            unique: 3,
        },
    ),
    UnboundVariable(
        Name {
            text: "p",
            unique: 3,
        },
    ),
]
