crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__recursive_group_scope_is_simultaneous_and_parameters_are_local.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
letrec
  f#4 : 'erased -> 'erased [static [0]] = \p#6 : 'erased -> g#5 p#6
  g#5 : 'erased -> 'erased [static []] = \ -> f#4
in
g#5
