crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__replacement_is_not_substituted_recursively.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
trace "replacement" in x#1
