crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__scope_diagnostics.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: "validate(tree, &[])"
---
Err(
    [
        DuplicateBinder(
            Name {
                text: "x",
                unique: 10,
            },
        ),
        UnboundVariable(
            Name {
                text: "x",
                unique: 10,
            },
        ),
        UnboundVariable(
            Name {
                text: "y",
                unique: 11,
            },
        ),
    ],
)
