crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__substitution_avoids_capture_and_freshens_each_copy.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
\y#4 : 'erased -> constr 0 (\z#5 : 'erased -> constr 0 y#2 z#5) (\z#6 : 'erased -> constr 0 y#2 z#6)
