crates/nash-ir/src/hygiene/snapshots/nash_ir__hygiene__tests__substitution_respects_let_rhs_and_shadowed_body.snap
---
source: crates/nash-ir/src/hygiene/tests.rs
expression: pretty(result)
---
let x#2 : int = 42 in
x#2
